output
g++ -I. -g -std=c++11 -Wall -Wextra -Werror -pthread -O *.cpp -lgtest -lgtest_main -o run.tests
Cell.cpp: In member function 'virtual Cell* LiveCell::breedWithLiveNeighbours(int)':
Cell.cpp:4:76: error: expected type-specifier before 'ZombieCell'
   if (numberOfLiveNeighbours < 0 || numberOfLiveNeighbours > 8) return new ZombieCell();
                                                                            ^
Cell.cpp:4:76: error: expected ';' before 'ZombieCell'
Cell.cpp:4:87: error: 'ZombieCell' was not declared in this scope
   if (numberOfLiveNeighbours < 0 || numberOfLiveNeighbours > 8) return new ZombieCell();
                                                                                       ^
make: *** [run.tests] Error 1
